More enthusiastic search button

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ was not previously possible. (It is not yet possible to cancel before the header
         <output id="bytes" for="substring"></output>
     </label>
 
-    <input type="submit" value="Search!">
+    <input type="submit" value="Search, with the Power of Streams!">
 
     <fieldset id="output" hidden>
         <progress id="progress"></progress>
