--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>Fetch + Streams Demo</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+<link href="https://resources.whatwg.org/logo-streams.svg" rel="icon">
 
 <style>
     * { box-sizing: border-box; }
